--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+  min-height: 100vh;
+  color: #fff;
 }
 
 .App-logo {
@@ -14,7 +18,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #032f86;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -25,7 +29,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #719ca7;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +39,20 @@
   to {
     transform: rotate(360deg);
   }
+}
+section {
+  background: rgb(47, 33, 68);
+  margin: 20px 0;
+  padding: 25px;
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+.card {
+  background: linear-gradient(45deg, rgb(92, 92, 141), #4d5455ff);
+  backdrop-filter: blur(10px);
+  border-radius: 20px;
+  padding: 30px;
+  margin: 20px 0;
+  box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+  border: 1px solid rgba(255,255,255,0.2);
 }
