--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,5 +1,6 @@
 .header {
-  background: linear-gradient(45deg, rgb(92, 92, 141), #4d5455ff);
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
   padding: 40px 20px;
   text-align: center;
   border-radius: 20px;
